--- a/TMSProject/TMSProject/Classes/View/BackUpWindow.xaml
+++ b/TMSProject/TMSProject/Classes/View/BackUpWindow.xaml
@@ -6,7 +6,15 @@
              xmlns:local="clr-namespace:TMSProject.Classes.View"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
+    <Grid Background="Wheat">
+        <Button x:Name="btnBackUp" Content="Back Up" HorizontalAlignment="Left" Margin="27,10,0,0" VerticalAlignment="Top" Width="153" Height="82" Click="btnBackUp_Click"/>
+        <Button x:Name="btnRestore" Visibility="Hidden" Content="Restore" HorizontalAlignment="Left" Margin="602,10,0,0" VerticalAlignment="Top" Width="155" Height="82" Click="btnRestore_Click" RenderTransformOrigin="4.33,-0.671"/>
+        <TextBox Name="currentPath" Foreground="Black" HorizontalAlignment="Left" Height="24" Margin="221,38,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="347"/>
+        <ScrollViewer HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Auto" Margin="0,124,0,0" >
+
+            <TextBlock FontSize="20" Foreground="Black" Name="debugLog"/>
+
+        </ScrollViewer>
+        <Button Name="btnGetfile" Content="Get File Directory" HorizontalAlignment="Left" Margin="329,87,0,0" VerticalAlignment="Top" Width="153" Height="32" Click="btnGetfile_Click"/>
     </Grid>
 </UserControl>
